# Resume_critique

./: main.py  pyproject.toml
